--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -1,5 +1,7 @@
 .sidebar {
   width: 300px;
+  max-height: 100vh;
+  height: 100vh;
   background-color: #3b3b3b;
   display: flex;
   flex-direction: column;
