--- a/src/components/Calendar/Calendar.css
+++ b/src/components/Calendar/Calendar.css
@@ -1,6 +1,6 @@
 .calendar {
   width: 100%;
-  height: 93%;
+  height: calc(100vh - 95px);
   background-color: #525252;
   padding-bottom: 15px;
   border-radius: 0 4px 4px 4px;
@@ -77,7 +77,7 @@
 }
 .calendar .calendar_section {
   width: calc(100% - 12px);
-  height: 580px;
+  height: calc(100% - 49px);
   background-color: #292929;
   margin-left: 6px;
   margin-right: 6px;
