--- a/src/components/Content/Content.css
+++ b/src/components/Content/Content.css
@@ -3,8 +3,11 @@
   display: flex;
   flex-direction: column;
 }
+.content .content_navbar {
+  height: 35px;
+}
 .content .content_sides {
-  height: 95%;
+  height: calc(100vh - 35px);
   display: grid;
   grid-template-columns: 1fr auto;
   margin: 5px;
