--- a/src/components/Patterns/Patterns.css
+++ b/src/components/Patterns/Patterns.css
@@ -1,6 +1,6 @@
 .patterns {
   width: 100%;
-  height: 93%;
+  height: calc(100vh - 95px);
   background-color: #525252;
   padding-bottom: 15px;
   border-radius: 0 4px 4px 4px;
@@ -9,11 +9,12 @@
   background-color: #d5dde0;
 }
 .patterns .patterns_content {
+  height: calc(100% + 8px);
   padding-top: 10px;
 }
 .patterns .patterns_section {
   width: calc(100% - 12px);
-  height: 94%;
+  height: 100%;
   background-color: #292929;
   margin-right: 6px;
   margin-left: 6px;
