--- a/src/components/Technical_Indicator/Tech_Section.css
+++ b/src/components/Technical_Indicator/Tech_Section.css
@@ -1,6 +1,6 @@
 .tech_indicator {
   width: 100%;
-  height: 93%;
+  height: calc(100vh - 95px);
   background-color: #525252;
   border-radius: 0 4px 4px 4px;
 }
@@ -55,7 +55,7 @@
 }
 .tech_section {
   width: calc(100% - 12px);
-  height: 94%;
+  height: calc(100% - 42px);
   background-color: #292929;
   margin-left: 6px;
   margin-right: 6px;
