--- a/src/components/PatternsSignals/PatternsSignals.css
+++ b/src/components/PatternsSignals/PatternsSignals.css
@@ -1,7 +1,33 @@
 .patterns_signals {
   width: 100%;
+  flex: 1;
   margin-right: 5px;
   border-radius: 4px 0px 4px 4px;
+}
+.blurred {
+  filter: blur(8px);
+  pointer-events: none;
+  position: relative;
+}
+.blur_message {
+  background-color: #525252;
+  font-size: 14px;
+  font-weight: 500;
+  text-align: center;
+  position: absolute;
+  top: 85%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 10px 20px;
+  border-radius: 5px;
+  z-index: 1;
+  cursor: pointer;
+}
+.light_mode .blur_message {
+  background-color: #d5dde0;
+}
+.blur_message:hover {
+  background-color: var(--main_color);
 }
 .patterns_signals .patterns_signals_tabs {
   display: flex;
@@ -79,7 +105,7 @@
 }
 .patterns_signals .patterns_signals_content {
   width: 100%;
-  height: 100%;
+  height: 150px;
   background-color: #525252;
   padding-top: 5px;
   border-radius: 0px 0px 4px 4px;
@@ -89,8 +115,7 @@
 }
 .patterns_signals .patterns_signals_section {
   width: calc(100% - 12px);
-  max-height: calc(100% - 50px);
-  height: 200px;
+  height: calc(100% - 5px);
   background-color: #292929;
   margin-left: 6px;
   padding: 5px;
