--- a/src/components/Content/Content.css
+++ b/src/components/Content/Content.css
@@ -1,14 +1,37 @@
 .content {
-  flex: 1;
+  width: 100%;
+  height: 100vh;
+  display: grid;
+  grid-template-columns: 1fr auto;
+  margin-left: 5px;
+}
+@media (max-width: 480px) {
+  .content {
+    display: flex;
+    flex-direction: column;
+  }
+}
+.content .content_middle {
+  width: 100%;
+  height: 97vh;
   display: flex;
   flex-direction: column;
 }
-.content .content_navbar {
-  height: 35px;
+@media (max-width: 480px) {
+  .content .content_middle {
+    order: 2;
+    display: none;
+  }
 }
-.content .content_sides {
-  height: calc(100vh - 35px);
-  display: grid;
-  grid-template-columns: 1fr auto;
-  margin: 5px;
+.content .content_Rsides {
+  width: 100%;
+  height: 97vh;
+  display: flex;
+  flex-direction: column;
+  align-items: end;
+}
+@media (max-width: 480px) {
+  .content .content_Rsides {
+    order: 1;
+  }
 }
