--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -1,5 +1,5 @@
 .sidebar {
-  width: 300px;
+  width: 370px;
   max-height: 100vh;
   height: 100vh;
   background-color: #3b3b3b;
@@ -7,6 +7,11 @@
   flex-direction: column;
   justify-content: space-between;
   transition: var(--main_transition);
+}
+@media (max-width: 480px) {
+  .sidebar {
+    min-width: 100%;
+  }
 }
 .light_mode .sidebar {
   background-color: #edf0f2;
@@ -24,6 +29,7 @@
 
 /* Top Menu */
 .top_menu {
+  width: 100%;
   height: 40px;
   display: flex;
   justify-content: space-between;
@@ -34,6 +40,7 @@
   padding: 16px 13px;
 }
 .top_menu .top_menu_bar {
+  width: 100%;
   display: flex;
   flex-direction: column;
   gap: 5px;
@@ -94,6 +101,15 @@
   z-index: 10;
   transition: var(--main_transition);
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+@media (max-width: 480px) {
+  .lang_dropdown .dropdown_menu {
+    width: 70px;
+    padding-bottom: 5px;
+    flex-direction: column;
+    top: 0px;
+    left: calc(100% - 70px);
+  }
 }
 .light_mode .lang_dropdown .dropdown_menu {
   background-color: #d5dde0;
