Updated P.P section and updated rightSide section

--- a/src/components/ChartsView/ChartsView.css
+++ b/src/components/ChartsView/ChartsView.css
@@ -3,6 +3,7 @@
 }
 .charts .charts_view {
   height: 65vh;
+  width: 100%;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(auto, 1fr));
   grid-gap: 5px;
