--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -64,3 +64,13 @@
   border-radius: var(--border_radius);
   cursor: pointer;
 }
+.navbar_login .icon_btn {
+  color: white;
+  background-color: var(--main_color);
+  font-size: 12px;
+  padding: 4px 12.5px;
+  border: none;
+  outline: none;
+  border-radius: var(--border_radius);
+  cursor: pointer;
+}
