--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -1,6 +1,6 @@
 .sidebar {
   width: 370px;
-  max-height: 100vh;
+  min-height: 100vh;
   height: 100vh;
   background-color: #3b3b3b;
   display: flex;
@@ -10,7 +10,8 @@
 }
 @media (max-width: 480px) {
   .sidebar {
-    min-width: 100%;
+    min-width: 327px;
+    height: 500px;
   }
 }
 .light_mode .sidebar {
@@ -169,6 +170,9 @@
   display: flex;
   flex-direction: column;
   gap: 1px;
+}
+.sm_sidebar .center_menu {
+  gap: 5px;
 }
 .center_menu .center_menu_list {
   width: 100%;
