Finished responsive and converted the language to Arabic and German

--- a/src/components/AllSymbols/AllSymbols.css
+++ b/src/components/AllSymbols/AllSymbols.css
@@ -128,6 +128,11 @@
   margin-top: 6px;
   overflow: auto;
 }
+@media (min-width: 481px) and (max-width: 767px) {
+  .symbol .symbol_section {
+    max-height: 320px;
+  }
+}
 .popular .popular_section {
   width: 100%;
   display: flex;
