--- a/src/components/Contact_Us/Contact_Us.css
+++ b/src/components/Contact_Us/Contact_Us.css
@@ -1,9 +1,15 @@
 .contact {
-  width: 100%;
+  max-width: 100%;
   display: flex;
   gap: 30px;
   margin-top: 50px;
   margin-bottom: 30px;
+}
+@media (max-width: 1199px) {
+  .contact {
+    margin-top: 30px;
+    margin-bottom: 10px;
+  }
 }
 
 /* Left Side */
@@ -13,6 +19,11 @@
   border-radius: 8px;
   background-image: linear-gradient(10deg, #19499c 0%, #2980b9 100%);
   box-shadow: 10px 10px 15px 0px rgba(0, 0, 0, 0.5);
+}
+@media (max-width: 768px) {
+  .contact_left {
+    display: none;
+  }
 }
 .contact_left .contact_left_info {
   padding: 30px;
@@ -56,6 +67,11 @@
   width: 50%;
   height: 100%;
 }
+@media (max-width: 768px) {
+  .contact_right {
+    width: 100%;
+  }
+}
 .contact_right_info .contact_form {
   width: 100%;
   display: flex;
@@ -80,6 +96,13 @@
 .light_mode .contact_right_info .contact_form .contact_err_msg {
   background: #d5dde0;
 }
+@media (max-width: 480px) {
+  .contact_right_info .contact_form .contact_err_msg {
+    font-size: 12px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+  }
+}
 .contact_right_info .contact_form .contact_success_msg {
   color: #47c71d;
   text-align: center;
@@ -95,6 +118,13 @@
 }
 .light_mode .contact_right_info .contact_form .contact_success_msg {
   background: #d5dde0;
+}
+@media (max-width: 480px) {
+  .contact_right_info .contact_form .contact_success_msg {
+    font-size: 12px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+  }
 }
 .contact_form .contact_name_phone {
   width: 100%;
@@ -149,6 +179,11 @@
   border-radius: 8px;
   cursor: pointer;
   background-image: linear-gradient(10deg, #19499c 0%, #2980b9 100%);
+}
+@media (max-width: 480px) {
+  .contact_form .contact_submit .contact_submit_button {
+    margin: 5px auto;
+  }
 }
 .contact_form .contact_submit .contact_submit_button:hover {
   background-image: linear-gradient(10deg, #2980b9 0%, #19499c 100%);
