--- a/src/components/Content/Content.css
+++ b/src/components/Content/Content.css
@@ -18,10 +18,16 @@
   display: flex;
   flex-direction: column;
 }
-@media (max-width: 480px) {
+@media (min-width: 320px) and (max-width: 480px) {
   .content .content_middle {
-    min-width: 100%;
     order: 2;
+    display: none;
+  }
+}
+@media (min-width: 767px) and (max-width: 1023px) {
+  .content .content_middle {
+    order: 2;
+    display: none;
   }
 }
 .content .content_Rsides {
