--- a/src/components/Login_Register/Login_Register.css
+++ b/src/components/Login_Register/Login_Register.css
@@ -1,6 +1,6 @@
 .login_form,
 .signup_form {
-  width: 100%;
+  width: 350px;
   display: flex;
   flex-direction: column;
   gap: 10px;
@@ -13,16 +13,38 @@
   align-items: center;
   margin-top: 20px;
 }
+@media (min-width: 481px) and (max-width: 767px) {
+  .form_header {
+    margin-top: 5px;
+  }
+}
 .form_header .form_icon {
   color: var(--main_color);
   font-size: 60px;
   padding-bottom: -30px;
+}
+@media (min-width: 481px) and (max-width: 767px) {
+  .form_header .form_icon {
+    font-size: 40px;
+  }
+}
+@media (min-width: 481px) and (max-width: 767px) {
+  .form_header .signup_icon {
+    display: none;
+  }
 }
 .login_form h1,
 .signup_form h1 {
   color: white;
   margin-bottom: 20px;
   text-transform: uppercase;
+}
+@media (min-width: 481px) and (max-width: 767px) {
+  .login_form h1,
+  .signup_form h1 {
+    margin-bottom: 5px;
+    font-size: 25px;
+  }
 }
 .light_mode .login_form h1,
 .light_mode .signup_form h1 {
@@ -34,11 +56,21 @@ form {
   flex-direction: column;
   gap: 15px;
 }
+@media (min-width: 481px) and (max-width: 767px) {
+  form {
+    gap: 10px;
+  }
+}
 form input {
   padding: 10px 15px;
   border-radius: var(--border_radius);
   border: none;
   outline: none;
+}
+@media (min-width: 481px) and (max-width: 767px) {
+  form input {
+    padding: 5px 10px;
+  }
 }
 .light_mode form input {
   background: #d5dde0;
@@ -66,9 +98,17 @@ form button {
   padding: 10px 25px;
   border: none;
   outline: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   border-radius: 25px;
   transition: var(--main_transition);
   cursor: pointer;
+}
+@media (min-width: 481px) and (max-width: 767px) {
+  form button {
+    margin: 5px auto 0px auto;
+  }
 }
 form button:hover {
   background-image: linear-gradient(120deg, #1a6bdc 0%, #32e9f6 100%);
@@ -80,6 +120,11 @@ form button:hover {
   margin-top: 20px;
   cursor: pointer;
 }
+@media (min-width: 481px) and (max-width: 767px) {
+  .login_span {
+    margin-top: 5px;
+  }
+}
 .login_span:hover {
   color: var(--main_color);
   text-decoration: underline;
@@ -90,11 +135,21 @@ form button:hover {
   justify-content: center;
   margin-top: 20px;
 }
+@media (min-width: 481px) and (max-width: 767px) {
+  .signup_span {
+    margin-top: 5px;
+  }
+}
 .signup_span span {
   margin-left: 5px;
+  margin-right: 5px;
   cursor: pointer;
 }
 .signup_span span:hover {
   color: var(--main_color);
   text-decoration: underline;
+}
+.arabic_text {
+  text-align: right;
+  direction: rtl;
 }
