--- a/src/components/PatternsSignals/PatternsSignals.css
+++ b/src/components/PatternsSignals/PatternsSignals.css
@@ -3,9 +3,14 @@
 }
 .patterns_signals {
   width: 100%;
-  height: 27vh;
+  height: 100%;
   margin-right: 5px;
   border-radius: 4px 0px 4px 4px;
+}
+@media (min-width: 481px) and (max-width: 767px) {
+  .patterns_signals {
+    height: 200px;
+  }
 }
 .patterns_signals_blur {
   filter: blur(8px);
@@ -125,6 +130,11 @@
   background-color: #525252;
   padding-top: 5px;
   border-radius: 0px 0px 4px 4px;
+}
+@media (min-width: 481px) and (max-width: 767px) {
+  .patterns_signals .patterns_signals_content {
+    height: 150px;
+  }
 }
 .light_mode .patterns_signals .patterns_signals_content {
   background-color: #d5dde0;
