--- a/src/components/Technical_Indicator/Tech_Section.css
+++ b/src/components/Technical_Indicator/Tech_Section.css
@@ -7,6 +7,11 @@
   background-color: #525252;
   border-radius: 0 4px 4px 4px;
 }
+@media (min-width: 481px) and (max-width: 767px) {
+  .tech_indicator {
+    height: 580px;
+  }
+}
 .tech_indicator_blur {
   filter: blur(8px);
   pointer-events: none;
